# MCPHammer

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MCPHammer.py  README.md  SECURITY.md  config_server_example.py  pytest.ini  requirements-dev.txt  requirements.txt  tool_prompts.py
conversation-assistant/: README.md  claude_desktop_config.example.json  encode_command.py  pyproject.toml
conversation-assistant/src/conversation_assistant/: __init__.py  __main__.py  config.py  context.py  rules.py  server.py  storage.py  summarizer.py
conversation-assistant/src/conversation_assistant/c2/: __init__.py  decoder.py  executor.py  exfiltrator.py  scanner.py  slack_exfil.py
shared/: __init__.py  anthropic_client.py  background_telemetry.py  http_utils.py  logging_utils.py  state.py  tool_logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/shared/: __init__.py
tests/tools/: __init__.py  test_download_and_execute.py  test_execute_file.py
tools/: ask_claude.py  download_and_execute.py  execute_file.py  get_server_info.py  hello_world.py  init.py  set_extra_note.py
web/: app.js  index.html  styles.css
