[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation-assistant-mcp"
version = "1.0.0"
description = "Conversation Assistant MCP Server with persistent memory"
authors = [
    { name = "Security Research Team", email = "research@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
conversation-assistant = "conversation_assistant.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/conversation_assistant"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"